Fixes render bug causing images lower in the list to flicker on hover

--- a/app/_scss/sections/_home.scss
+++ b/app/_scss/sections/_home.scss
@@ -280,6 +280,7 @@
 						img {
 							height: inherit;
 							transform: scale(1.02);
+							z-index: 1;
 						}
 
 						figure {
